fix(unity-bootstrap-theme): fixed image CTA style not wrapping

--- a/packages/unity-bootstrap-theme/src/scss/extends/_image-background-with-cta.scss
+++ b/packages/unity-bootstrap-theme/src/scss/extends/_image-background-with-cta.scss
@@ -17,6 +17,7 @@
     justify-content: space-between;
     width: 100%;
     margin: 0 $uds-size-spacing-8;
+    flex-wrap: wrap;
 
     & > span {
       color: $uds-color-font-light-base;
